# cppcli

./: CMakeLists.txt  README.md
kg2lb/: CMakeLists.txt  main.cpp  utils.cpp
lb2kg/: CMakeLists.txt  main.cpp
python_with_cmake_test/: CMakeLists.txt  py_with_cmake.py
